versions/0.27.0/_sources/refs/_aws-cdk_aws-iot.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"wgh1bmw1b3otTA2dmP6DLtuJExH0Cy4BtgH8EcHgypY="}

@aws-cdk/aws-iot
================

.. mdinclude:: ./__aws-cdk_aws-iot.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.IoT/0.27.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.IoT" Version="0.27.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.IoT --version 0.27.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.IoT" version="0.27.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/iot/0.27.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:iot:jar:0.27.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="iot" rev="0.27.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>iot</artifactId>
           <version>0.27.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:iot:0.27.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='iot', version='0.27.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iot/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iot@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iot": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iot@0.27.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-iot/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-iot@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-iot": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-iot@0.27.0



.. py:module:: @aws-cdk/aws-iot

CfnCertificate
^^^^^^^^^^^^^^

.. py:class:: CfnCertificate(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnCertificate;

      .. code-tab:: javascript

         const { CfnCertificate } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CfnCertificate } from '@aws-cdk/aws-iot';



   A CloudFormation `AWS::IoT::Certificate`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-iot.CfnCertificateProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: certificateArn

      :type: string *(readonly)*


   .. py:attribute:: certificateId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iot.CfnCertificateProps`\  *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnCertificateProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnCertificateProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnCertificateProps;

      .. code-tab:: javascript

         // CfnCertificateProps is an interface

      .. code-tab:: typescript

         import { CfnCertificateProps } from '@aws-cdk/aws-iot';



   Properties for defining a `AWS::IoT::Certificate`





   .. py:attribute:: certificateSigningRequest

      `AWS::IoT::Certificate.CertificateSigningRequest`



      :type: string *(readonly)*


   .. py:attribute:: status

      `AWS::IoT::Certificate.Status`



      :type: string *(readonly)*


CfnPolicy
^^^^^^^^^

.. py:class:: CfnPolicy(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnPolicy;

      .. code-tab:: javascript

         const { CfnPolicy } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CfnPolicy } from '@aws-cdk/aws-iot';



   A CloudFormation `AWS::IoT::Policy`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-iot.CfnPolicyProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: policyArn

      :type: string *(readonly)*


   .. py:attribute:: policyName

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iot.CfnPolicyProps`\  *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnPolicyPrincipalAttachment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnPolicyPrincipalAttachment(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnPolicyPrincipalAttachment;

      .. code-tab:: javascript

         const { CfnPolicyPrincipalAttachment } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CfnPolicyPrincipalAttachment } from '@aws-cdk/aws-iot';



   A CloudFormation `AWS::IoT::PolicyPrincipalAttachment`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-iot.CfnPolicyPrincipalAttachmentProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iot.CfnPolicyPrincipalAttachmentProps`\  *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnPolicyPrincipalAttachmentProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnPolicyPrincipalAttachmentProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnPolicyPrincipalAttachmentProps;

      .. code-tab:: javascript

         // CfnPolicyPrincipalAttachmentProps is an interface

      .. code-tab:: typescript

         import { CfnPolicyPrincipalAttachmentProps } from '@aws-cdk/aws-iot';



   Properties for defining a `AWS::IoT::PolicyPrincipalAttachment`





   .. py:attribute:: policyName

      `AWS::IoT::PolicyPrincipalAttachment.PolicyName`



      :type: string *(readonly)*


   .. py:attribute:: principal

      `AWS::IoT::PolicyPrincipalAttachment.Principal`



      :type: string *(readonly)*


CfnPolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnPolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnPolicyProps;

      .. code-tab:: javascript

         // CfnPolicyProps is an interface

      .. code-tab:: typescript

         import { CfnPolicyProps } from '@aws-cdk/aws-iot';



   Properties for defining a `AWS::IoT::Policy`





   .. py:attribute:: policyDocument

      `AWS::IoT::Policy.PolicyDocument`



      :type: json or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:attribute:: policyName

      `AWS::IoT::Policy.PolicyName`



      :type: string *(optional)* *(readonly)*


CfnThing
^^^^^^^^

.. py:class:: CfnThing(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnThing;

      .. code-tab:: javascript

         const { CfnThing } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CfnThing } from '@aws-cdk/aws-iot';



   A CloudFormation `AWS::IoT::Thing`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-iot.CfnThingProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iot.CfnThingProps`\  *(readonly)*


   .. py:attribute:: thingName

      :type: string *(readonly)*

   .. py:class:: AttributePayloadProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnThing.AttributePayloadProperty;

         .. code-tab:: javascript

            // CfnThing.AttributePayloadProperty is an interface

         .. code-tab:: typescript

            import { CfnThing.AttributePayloadProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: attributes

         `CfnThing.AttributePayloadProperty.Attributes`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or string => string *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnThingPrincipalAttachment
^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnThingPrincipalAttachment(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnThingPrincipalAttachment;

      .. code-tab:: javascript

         const { CfnThingPrincipalAttachment } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CfnThingPrincipalAttachment } from '@aws-cdk/aws-iot';



   A CloudFormation `AWS::IoT::ThingPrincipalAttachment`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-iot.CfnThingPrincipalAttachmentProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iot.CfnThingPrincipalAttachmentProps`\  *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnThingPrincipalAttachmentProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnThingPrincipalAttachmentProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnThingPrincipalAttachmentProps;

      .. code-tab:: javascript

         // CfnThingPrincipalAttachmentProps is an interface

      .. code-tab:: typescript

         import { CfnThingPrincipalAttachmentProps } from '@aws-cdk/aws-iot';



   Properties for defining a `AWS::IoT::ThingPrincipalAttachment`





   .. py:attribute:: principal

      `AWS::IoT::ThingPrincipalAttachment.Principal`



      :type: string *(readonly)*


   .. py:attribute:: thingName

      `AWS::IoT::ThingPrincipalAttachment.ThingName`



      :type: string *(readonly)*


CfnThingProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnThingProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnThingProps;

      .. code-tab:: javascript

         // CfnThingProps is an interface

      .. code-tab:: typescript

         import { CfnThingProps } from '@aws-cdk/aws-iot';



   Properties for defining a `AWS::IoT::Thing`





   .. py:attribute:: attributePayload

      `AWS::IoT::Thing.AttributePayload`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnThing.AttributePayloadProperty`\  *(optional)* *(readonly)*


   .. py:attribute:: thingName

      `AWS::IoT::Thing.ThingName`



      :type: string *(optional)* *(readonly)*


CfnTopicRule
^^^^^^^^^^^^

.. py:class:: CfnTopicRule(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnTopicRule;

      .. code-tab:: javascript

         const { CfnTopicRule } = require('@aws-cdk/aws-iot');

      .. code-tab:: typescript

         import { CfnTopicRule } from '@aws-cdk/aws-iot';



   A CloudFormation `AWS::IoT::TopicRule`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-iot.CfnTopicRuleProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-iot.CfnTopicRuleProps`\  *(readonly)*


   .. py:attribute:: topicRuleArn

      :type: string *(readonly)*


   .. py:attribute:: topicRuleName

      :type: string *(readonly)*

   .. py:class:: ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.ActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.ActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.ActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: cloudwatchAlarm

         `CfnTopicRule.ActionProperty.CloudwatchAlarm`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.CloudwatchAlarmActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: cloudwatchMetric

         `CfnTopicRule.ActionProperty.CloudwatchMetric`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.CloudwatchMetricActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: dynamoDb

         `CfnTopicRule.ActionProperty.DynamoDB`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.DynamoDBActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: dynamoDBv2

         `CfnTopicRule.ActionProperty.DynamoDBv2`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.DynamoDBv2ActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: elasticsearch

         `CfnTopicRule.ActionProperty.Elasticsearch`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.ElasticsearchActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: firehose

         `CfnTopicRule.ActionProperty.Firehose`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.FirehoseActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: iotAnalytics

         `CfnTopicRule.ActionProperty.IotAnalytics`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.IotAnalyticsActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: kinesis

         `CfnTopicRule.ActionProperty.Kinesis`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.KinesisActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: lambda

         `CfnTopicRule.ActionProperty.Lambda`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.LambdaActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: republish

         `CfnTopicRule.ActionProperty.Republish`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.RepublishActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: s3

         `CfnTopicRule.ActionProperty.S3`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.S3ActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: sns

         `CfnTopicRule.ActionProperty.Sns`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.SnsActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: sqs

         `CfnTopicRule.ActionProperty.Sqs`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.SqsActionProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: stepFunctions

         `CfnTopicRule.ActionProperty.StepFunctions`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.StepFunctionsActionProperty`\  *(optional)* *(readonly)*


   .. py:class:: CloudwatchAlarmActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.CloudwatchAlarmActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.CloudwatchAlarmActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.CloudwatchAlarmActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: alarmName

         `CfnTopicRule.CloudwatchAlarmActionProperty.AlarmName`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.CloudwatchAlarmActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: stateReason

         `CfnTopicRule.CloudwatchAlarmActionProperty.StateReason`



         :type: string *(readonly)*


      .. py:attribute:: stateValue

         `CfnTopicRule.CloudwatchAlarmActionProperty.StateValue`



         :type: string *(readonly)*


   .. py:class:: CloudwatchMetricActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.CloudwatchMetricActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.CloudwatchMetricActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.CloudwatchMetricActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: metricName

         `CfnTopicRule.CloudwatchMetricActionProperty.MetricName`



         :type: string *(readonly)*


      .. py:attribute:: metricNamespace

         `CfnTopicRule.CloudwatchMetricActionProperty.MetricNamespace`



         :type: string *(readonly)*


      .. py:attribute:: metricUnit

         `CfnTopicRule.CloudwatchMetricActionProperty.MetricUnit`



         :type: string *(readonly)*


      .. py:attribute:: metricValue

         `CfnTopicRule.CloudwatchMetricActionProperty.MetricValue`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.CloudwatchMetricActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: metricTimestamp

         `CfnTopicRule.CloudwatchMetricActionProperty.MetricTimestamp`



         :type: string *(optional)* *(readonly)*


   .. py:class:: DynamoDBActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.DynamoDBActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.DynamoDBActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.DynamoDBActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: hashKeyField

         `CfnTopicRule.DynamoDBActionProperty.HashKeyField`



         :type: string *(readonly)*


      .. py:attribute:: hashKeyValue

         `CfnTopicRule.DynamoDBActionProperty.HashKeyValue`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.DynamoDBActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: tableName

         `CfnTopicRule.DynamoDBActionProperty.TableName`



         :type: string *(readonly)*


      .. py:attribute:: hashKeyType

         `CfnTopicRule.DynamoDBActionProperty.HashKeyType`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: payloadField

         `CfnTopicRule.DynamoDBActionProperty.PayloadField`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: rangeKeyField

         `CfnTopicRule.DynamoDBActionProperty.RangeKeyField`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: rangeKeyType

         `CfnTopicRule.DynamoDBActionProperty.RangeKeyType`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: rangeKeyValue

         `CfnTopicRule.DynamoDBActionProperty.RangeKeyValue`



         :type: string *(optional)* *(readonly)*


   .. py:class:: DynamoDBv2ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.DynamoDBv2ActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.DynamoDBv2ActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.DynamoDBv2ActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: putItem

         `CfnTopicRule.DynamoDBv2ActionProperty.PutItem`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.PutItemInputProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.DynamoDBv2ActionProperty.RoleArn`



         :type: string *(optional)* *(readonly)*


   .. py:class:: ElasticsearchActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.ElasticsearchActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.ElasticsearchActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.ElasticsearchActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: endpoint

         `CfnTopicRule.ElasticsearchActionProperty.Endpoint`



         :type: string *(readonly)*


      .. py:attribute:: id

         `CfnTopicRule.ElasticsearchActionProperty.Id`



         :type: string *(readonly)*


      .. py:attribute:: index

         `CfnTopicRule.ElasticsearchActionProperty.Index`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.ElasticsearchActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: type

         `CfnTopicRule.ElasticsearchActionProperty.Type`



         :type: string *(readonly)*


   .. py:class:: FirehoseActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.FirehoseActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.FirehoseActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.FirehoseActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: deliveryStreamName

         `CfnTopicRule.FirehoseActionProperty.DeliveryStreamName`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.FirehoseActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: separator

         `CfnTopicRule.FirehoseActionProperty.Separator`



         :type: string *(optional)* *(readonly)*


   .. py:class:: IotAnalyticsActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.IotAnalyticsActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.IotAnalyticsActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.IotAnalyticsActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: channelName

         `CfnTopicRule.IotAnalyticsActionProperty.ChannelName`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.IotAnalyticsActionProperty.RoleArn`



         :type: string *(readonly)*


   .. py:class:: KinesisActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.KinesisActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.KinesisActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.KinesisActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: roleArn

         `CfnTopicRule.KinesisActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: streamName

         `CfnTopicRule.KinesisActionProperty.StreamName`



         :type: string *(readonly)*


      .. py:attribute:: partitionKey

         `CfnTopicRule.KinesisActionProperty.PartitionKey`



         :type: string *(optional)* *(readonly)*


   .. py:class:: LambdaActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.LambdaActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.LambdaActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.LambdaActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: functionArn

         `CfnTopicRule.LambdaActionProperty.FunctionArn`



         :type: string *(optional)* *(readonly)*


   .. py:class:: PutItemInputProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.PutItemInputProperty;

         .. code-tab:: javascript

            // CfnTopicRule.PutItemInputProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.PutItemInputProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: tableName

         `CfnTopicRule.PutItemInputProperty.TableName`



         :type: string *(readonly)*


   .. py:class:: RepublishActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.RepublishActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.RepublishActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.RepublishActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: roleArn

         `CfnTopicRule.RepublishActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: topic

         `CfnTopicRule.RepublishActionProperty.Topic`



         :type: string *(readonly)*


   .. py:class:: S3ActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.S3ActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.S3ActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.S3ActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: bucketName

         `CfnTopicRule.S3ActionProperty.BucketName`



         :type: string *(readonly)*


      .. py:attribute:: key

         `CfnTopicRule.S3ActionProperty.Key`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.S3ActionProperty.RoleArn`



         :type: string *(readonly)*


   .. py:class:: SnsActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.SnsActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.SnsActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.SnsActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: roleArn

         `CfnTopicRule.SnsActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: targetArn

         `CfnTopicRule.SnsActionProperty.TargetArn`



         :type: string *(readonly)*


      .. py:attribute:: messageFormat

         `CfnTopicRule.SnsActionProperty.MessageFormat`



         :type: string *(optional)* *(readonly)*


   .. py:class:: SqsActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.SqsActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.SqsActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.SqsActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: queueUrl

         `CfnTopicRule.SqsActionProperty.QueueUrl`



         :type: string *(readonly)*


      .. py:attribute:: roleArn

         `CfnTopicRule.SqsActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: useBase64

         `CfnTopicRule.SqsActionProperty.UseBase64`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:class:: StepFunctionsActionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.StepFunctionsActionProperty;

         .. code-tab:: javascript

            // CfnTopicRule.StepFunctionsActionProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.StepFunctionsActionProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: roleArn

         `CfnTopicRule.StepFunctionsActionProperty.RoleArn`



         :type: string *(readonly)*


      .. py:attribute:: stateMachineName

         `CfnTopicRule.StepFunctionsActionProperty.StateMachineName`



         :type: string *(readonly)*


      .. py:attribute:: executionNamePrefix

         `CfnTopicRule.StepFunctionsActionProperty.ExecutionNamePrefix`



         :type: string *(optional)* *(readonly)*


   .. py:class:: TopicRulePayloadProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.IoT;

         .. code-tab:: java

            import software.amazon.awscdk.services.iot.CfnTopicRule.TopicRulePayloadProperty;

         .. code-tab:: javascript

            // CfnTopicRule.TopicRulePayloadProperty is an interface

         .. code-tab:: typescript

            import { CfnTopicRule.TopicRulePayloadProperty } from '@aws-cdk/aws-iot';





      .. py:attribute:: actions

         `CfnTopicRule.TopicRulePayloadProperty.Actions`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.ActionProperty`\ )[] *(readonly)*


      .. py:attribute:: ruleDisabled

         `CfnTopicRule.TopicRulePayloadProperty.RuleDisabled`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: sql

         `CfnTopicRule.TopicRulePayloadProperty.Sql`



         :type: string *(readonly)*


      .. py:attribute:: awsIotSqlVersion

         `CfnTopicRule.TopicRulePayloadProperty.AwsIotSqlVersion`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: description

         `CfnTopicRule.TopicRulePayloadProperty.Description`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: errorAction

         `CfnTopicRule.TopicRulePayloadProperty.ErrorAction`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.ActionProperty`\  *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnTopicRuleProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnTopicRuleProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.IoT;

      .. code-tab:: java

         import software.amazon.awscdk.services.iot.CfnTopicRuleProps;

      .. code-tab:: javascript

         // CfnTopicRuleProps is an interface

      .. code-tab:: typescript

         import { CfnTopicRuleProps } from '@aws-cdk/aws-iot';



   Properties for defining a `AWS::IoT::TopicRule`





   .. py:attribute:: topicRulePayload

      `AWS::IoT::TopicRule.TopicRulePayload`



      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-iot.CfnTopicRule.TopicRulePayloadProperty`\  *(readonly)*


   .. py:attribute:: ruleName

      `AWS::IoT::TopicRule.RuleName`



      :type: string *(optional)* *(readonly)*


